environments/coolstore-inventory-dev/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/300-deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: inventory-database
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/adnan-drina/coolstore-inventory.git
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: coolstore-inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: inventory
  namespace: coolstore-inventory-dev
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: coolstore-inventory
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: inventory-database
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-url: https://github.com/adnan-drina/coolstore-inventory.git
      labels:
        app.kubernetes.io/name: inventory
        app.kubernetes.io/part-of: coolstore-inventory
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
      namespace: coolstore-inventory-dev
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: image-registry.openshift-image-registry.svc:5000/coolstore-inventory-dev/inventory:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: inventory
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - inventory
      from:
        kind: ImageStreamTag
        name: latest
    type: ImageChange
