environments/coolstore-inventory-dev/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: coolstore-inventory
    app.kubernetes.io/part-of: app-coolstore-inventory
  name: coolstore-inventory
  namespace: coolstore-inventory-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: coolstore-inventory
    app.kubernetes.io/part-of: app-coolstore-inventory
status:
  loadBalancer: {}
