environments/coolstore-inventory-dev/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/400-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: coolstore-inventory
    app.kubernetes.io/component: quarkus-service
  name: inventory
  namespace: coolstore-inventory-dev
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: coolstore-inventory
    app.kubernetes.io/component: quarkus-service
  type: ClusterIP
