environments/coolstore-inventory-dev/apps/app-coolstore-inventory/services/coolstore-inventory/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: coolstore-inventory
  namespace: coolstore-inventory-dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: coolstore-inventory
    weight: 100
  wildcardPolicy: None
